# email-triage

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  pyrightconfig.json  render.yaml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_users_and_tenants.py  0003_invitations.py
docs/: DEPLOY.md  WALKTHROUGH-api-keys.md  WALKTHROUGH-auth.md  WALKTHROUGH-oauth2-google.md  WALKTHROUGH-sqlalchemy.md  WALKTHROUGH.md
docs/exec-plans/: 01-mvp-email-triage.md  11-streaming-real.md  12-observability-logfire.md  13-evals.md  14-database-postgresql.md  15-auth-google-oauth2.md  16-users-and-password-auth.md  17-react-frontend.md  20-frontend-vercel-deploy.md  21-team-workspaces-rbac.md  22-workspace-management-ui.md  README.md
docs/features/: 01-day1-skeleton.md  02-schemas-and-llm.md  03-triage-endpoint.md  04-streaming.md  05-auth.md  06-logging.md  07-tests.md  08-pydantic-ai-refactor.md  09-deploy-config.md  10-deploy.md  12-observability.md  13-evals.md  14-database.md  15-auth.md  README.md  (+3 more)
email_triage/: config.py  deps.py  main.py  middleware.py  observability.py  schemas.py
evals/: dataset.jsonl  judge.py  metrics.py  run_evals.py  schemas.py
frontend/: .env.example  package-lock.json  vite.config.ts
scripts/: measure_ttft.py  smoke_llm.py
tests/: conftest.py  test_api_key.py  test_auth.py  test_db.py  test_health.py  test_observability.py  test_triage.py  test_workspaces.py  test_workspaces_api.py
(+53 files in other folders)
