[project]
name = "email-triage"
version = "0.1.0"
description = "AI email triage API: classify support emails and draft replies"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "bcrypt>=4.2",
    "fastapi[standard]>=0.136.3",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2",
    "joserfc>=1.7.1",
    "logfire[fastapi,httpx,system-metrics]>=4.34.0",
    "pydantic-ai-slim[groq]>=1.104.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.9",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "pre-commit>=4.6.0",
    "pyright[nodejs]>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["email_triage"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["email_triage", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
include = ["email_triage", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.14"

[tool.fastapi]
entrypoint = "email_triage.main:app"
